# kube-research-aiq

./: .env.example  .gitattributes  .gitignore  Makefile  README.md  docker-compose.yml
.github/workflows/: ci.yml
apps/dashboard/: Dockerfile  eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
apps/dashboard/src/: App.tsx  api.ts  icons.tsx  styles.css  types.ts
apps/research-service/: .dockerignore  Dockerfile  pyproject.toml
apps/research-service/src/kube_research_aiq/: __init__.py  llm.py  main.py  models.py  queue.py  researcher.py  settings.py  store.py  worker.py
apps/research-service/tests/: test_api.py  test_researcher.py
charts/kube-research-aiq/: Chart.yaml  values-free-micro.yaml  values-kind-nvidia.yaml  values-kind.yaml  values-production.yaml  values.yaml
charts/kube-research-aiq/templates/: NOTES.txt  _helpers.tpl  api-deployment.yaml  api-service.yaml  benchmark-cronjob.yaml  configmap.yaml  dashboard-deployment.yaml  dashboard-nginx-config.yaml  hpa.yaml  (+10 more)
deploy/argocd/: application-production.yaml  application.yaml
docs/: architecture.md  demo-walkthrough.md  deploy-doks.md  deploy-free-k3s.md  deploy-gce-free-k3s.md  deployment-options.md  github-publishing.md  implementation-roadmap.md  kind-demo.md
examples/: deep-research-request.json
kind/: kind-config.yaml
scripts/: create-kind-cluster.ps1  deploy-doks.ps1  deploy-free-k3s.ps1  deploy-gce-free-k3s.sh  deploy-kind-nvidia.ps1  deploy-kind.ps1  local-demo.ps1  set-nvidia-secret.ps1  smoke-kind-nvidia.ps1  smoke-test.ps1  validate-nvidia-key.ps1
